// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionTitleText Renders as expected and has no accessibility violations 1`] = `
<div>
  <div>
    <h2
      class="MuiTypography-root uppercase MuiTypography-h2 MuiTypography-alignCenter"
    >
      Bu
    </h2>
  </div>
</div>
`;

exports[`SectionTitleText Renders as expected with animation 1`] = `
<div>
  <div
    style="opacity: 0; transform: translateX(-50px) translateY(0px) translateZ(0);"
  >
    <h2
      class="MuiTypography-root uppercase MuiTypography-h2 MuiTypography-alignCenter"
    >
      Bu
    </h2>
  </div>
</div>
`;
